# rules_sxproto

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/: renovate.json5
.github/workflows/: bazel.yml  release_github.yaml  test_bazel.yaml
doc/playbook/: release_github.md
example/: BUILD.bazel  grocery.proto  intro.proto  intro_1_scalar.sxproto  intro_2_message.sxproto  intro_3_empty_message.sxpb  intro_4_repeated.sxproto  intro_5_array.sxpb  party_sauces.sxproto  party_sauces_repeated.sxproto  popcorn.sxproto  sauces.sxpb
pkg/source/: workflow_stage.sh
src/: BUILD.bazel  binaryproto2json.cc  binaryproto2json_camelcase.cc  binaryproto2sxproto_main.cc  binaryproto2textproto_main.cc  diffprotobuf.cc  json2binaryproto.cc  protobuf_schemae.cc  protobuf_schemae.hh  protobuf_transcode.cc  protobuf_transcode.hh  sxproto2binaryproto_main.cc  sxproto2textproto.c  sxproto2textproto.h  sxproto2textproto_main.c  textproto2binaryproto.cc  textproto2binaryproto_main.cc
sxproto/: defs.bzl
test/: BUILD.bazel
test/depend/: BUILD.bazel  shopping.proto  shopping.sxpb  shopping.sxproto  shopping_expect_test.cc  task.proto  task.sxproto  task_expect_test.cc
test/example/: BUILD.bazel  compare_repeated_test.fildesh  compile_json_test.fildesh  compile_textproto_test.fildesh  json_camel_case_test.fildesh  json_snake_case_test.fildesh  nonempty_test.fildesh  parse_test.c  party_sauces.textproto  party_sauces_repeated.textproto  protoc_textproto_test.fildesh  protoc_txtpb_test.fildesh  sauces.textproto  sauces_repeated.sxproto  sauces_repeated.txtpb
test/intro/: BUILD.bazel
test/loneof/: BUILD.bazel  travel.json  travel.proto  travel.sxpb  travel.txtpb
test/manyof/: BUILD.bazel  boolexpr.json  boolexpr.proto  boolexpr.sxpb  boolexpr.textproto  boolexpr.txtpb  compile_sxproto_test.fildesh  compile_textproto_test.fildesh
tool/: BUILD.bazel
