module(
    name = "rules_sxproto",
    version = "0.0.3",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(name = "fildesh", version = "0.1.3")
bazel_dep(name = "protobuf", version = "3.19.2")
bazel_dep(name = "rules_proto", version = "4.0.0")

# git_override(
#     module_name = "fildesh",
#     remote = "https://github.com/grencez/fildesh.git",
#     commit="1bddffb7c521c54b4d6a49cf6533b2c75b06f1f0",
# )
