module(
    name = "rules_sxproto",
    version = "0.0.4",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "fildesh", version = "0.1.8")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

# git_override(
#     module_name = "fildesh",
#     remote = "https://github.com/grencez/fildesh.git",
#     commit="1bddffb7c521c54b4d6a49cf6533b2c75b06f1f0",
# )
