module(
    name = "rules_sxproto",
    version = "0.0.4",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(name = "fildesh", version = "0.1.9")
bazel_dep(name = "protobuf", version = "3.19.6")
bazel_dep(name = "rules_proto", version = "4.0.0")

git_override(
    module_name = "fildesh",
    remote = "https://github.com/grencez/fildesh.git",
    commit="29ef2da4a4c4aeda9c0af917b95fc2c493d4f96d",
)
