load("//sxproto:defs.bzl", "sxproto_data")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = [
    "//test:__subpackages__",
])

proto_library(
    name = "intro_proto",
    srcs = ["intro.proto"],
)

sxproto_data(
    name = "intro_1_scalar",
    src = "intro_1_scalar.sxproto",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_2_message",
    src = "intro_2_message.sxproto",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_3_empty_message",
    src = "intro_3_empty_message.sxproto",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_4_repeated",
    src = "intro_4_repeated.sxproto",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_5_array",
    src = "intro_5_array.sxproto",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)


proto_library(
    name = "grocery_proto",
    srcs = ["grocery.proto"],
)

sxproto_data(
    name = "popcorn_data",
    src = "popcorn.sxproto",
    proto_deps = ["grocery_proto"],
    proto_message = "GroceryListItem",
)

sxproto_data(
    name = "sauces_data",
    src = "sauces.sxproto",
    out_textproto = "sauces_data.textproto",
    out_json = "sauces_data.json",
    out_json_camelcase = "sauces_data_camelcase.json",
    proto_deps = ["grocery_proto"],
    proto_message = "GroceryList",
)

exports_files([
    "popcorn.sxproto",
    "sauces.sxproto",
])
