load("//sxproto:defs.bzl", "sxproto_data")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = [
    "//test:__subpackages__",
])

proto_library(
    name = "intro_proto",
    srcs = ["intro.proto"],
)

sxproto_data(
    name = "intro_1_scalar",
    src = "intro_1_scalar.sxpb",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_2_message",
    src = "intro_2_message.sxpb",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_3_empty_message",
    src = "intro_3_empty_message.sxpb",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)
sxproto_data(
    name = "intro_5_array",
    src = "intro_5_array.sxpb",
    proto_deps = ["intro_proto"],
    proto_message = "IntroMessage",
)


proto_library(
    name = "grocery_proto",
    srcs = ["grocery.proto"],
)

sxproto_data(
    name = "popcorn_data",
    src = "popcorn.sxpb",
    proto_deps = ["grocery_proto"],
    proto_message = "GroceryListItem",
)

sxproto_data(
    name = "sauces_data",
    src = "sauces.sxpb",
    out_textproto = "sauces_data.txtpb",
    out_json = "sauces_data.json",
    out_json_camelcase = "sauces_data_camelcase.json",
    proto_deps = ["grocery_proto"],
    proto_message = "GroceryList",
)

exports_files([
    "popcorn.sxpb",
    "sauces.sxpb",
])
