
exports_files([
    "sxproto2textproto.c",
], visibility = [
    "//test:__subpackages__",
])

cc_binary(
    name = "sxproto2textproto",
    srcs = ["sxproto2textproto.c"],
    deps = [
        "@fildesh//:fildesh_lib",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "textproto2binaryproto",
    srcs = [
        "textproto2binaryproto.cc",
        "protobuf_schemae.cc",
        "protobuf_schemae.hh",
    ],
    deps = [
        "@fildesh//:fildesh_lib",
        "@protobuf//:protobuf",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "binaryproto2json",
    srcs = [
        "binaryproto2json.cc",
        "protobuf_schemae.cc",
        "protobuf_schemae.hh",
    ],
    deps = [
        "@fildesh//:fildesh_lib",
        "@protobuf//:protobuf",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "binaryproto2json_camelcase",
    srcs = [
        "binaryproto2json_camelcase.cc",
        "protobuf_schemae.cc",
        "protobuf_schemae.hh",
    ],
    deps = [
        "@fildesh//:fildesh_lib",
        "@protobuf//:protobuf",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "json2binaryproto",
    srcs = [
        "json2binaryproto.cc",
        "protobuf_schemae.cc",
        "protobuf_schemae.hh",
    ],
    deps = [
        "@fildesh//:fildesh_lib",
        "@protobuf//:protobuf",
    ],
    testonly = 1,
    visibility = ["//test:__subpackages__"],
)

cc_binary(
    name = "diffprotobuf",
    srcs = [
        "diffprotobuf.cc",
        "protobuf_schemae.cc",
        "protobuf_schemae.hh",
    ],
    deps = [
        "@fildesh//:fildesh_lib",
        "@protobuf//:protobuf",
    ],
    testonly = 1,
    visibility = ["//test:__subpackages__"],
)
