load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "grocery_proto",
    srcs = ["grocery.proto"],
)

run_binary(
    name = "gen_grocery_array_expected_binaryproto",
    tool = "@fildesh//:fildesh",
    srcs = [
        "grocery_array_expected.textproto",
        "grocery.proto",
        "@com_google_protobuf//:protoc",
    ],
    outs = [
        "grocery_array_expected.binaryproto",
    ],
    args = [
        "-stdin", "$(location grocery_array_expected.textproto)",
        "-stdout", "$(location grocery_array_expected.binaryproto)",
        "-alias", "protoc=$(location @com_google_protobuf//:protoc)",
        "--",
        "|< stdin",
        "|- protoc --encode=GroceryList \"$(location grocery.proto)\"",
        "|> stdout",
    ],
)
