load("@fildesh//tool/bazel:fildesh_test.bzl", "fildesh_test")
load(
    "//sxproto:defs.bzl",
    "sxproto_data",
    "protobuf_equality_test",
)

fildesh_test(
    name = "popcorn_nonempty_test",
    srcs = ["nonempty_test.fildesh"],
    input_by_option = {"result_file": "//example:popcorn_data"},
)

fildesh_test(
    name = "sauces_nonempty_test",
    srcs = ["nonempty_test.fildesh"],
    input_by_option = {"result_file": "//example:sauces_data"},
)

fildesh_test(
    name = "protoc_txtpb_test",
    srcs = ["protoc_txtpb_test.fildesh"],
    tool_by_alias = {
        "protoc": "@protobuf//:protoc",
        "diffprotobuf": "//tool:diffprotobuf",
    },
    input_by_option = {
        "binpb_file": "//example:sauces_data",
        "txtpb_file": "sauces.txtpb",
        "descriptor_set_file": "//example:grocery_proto",
    },
)

protobuf_equality_test(
    name = "sauces_textproto_equality_test",
    srcs = [
        "//example:sauces_data.txtpb",
        "//example:sauces_data",
    ],
    proto_deps = ["//example:grocery_proto"],
    proto_message = "GroceryList",
)

protobuf_equality_test(
    name = "sauces_json_equality_test",
    srcs = [
        "//example:sauces_data.json",
        "//example:sauces.sxpb",
    ],
    proto_deps = ["//example:grocery_proto"],
    proto_message = "GroceryList",
)

protobuf_equality_test(
    name = "sauces_json_camelcase_equality_test",
    srcs = [
        "//example:sauces_data_camelcase.json",
        "//example:sauces.sxpb",
    ],
    proto_deps = ["//example:grocery_proto"],
    proto_message = "GroceryList",
)

protobuf_equality_test(
    name = "repeated_textproto_equality_test",
    srcs = [
        "sauces_repeated.txtpb",
        "//example:sauces_data",
    ],
    proto_deps = ["//example:grocery_proto"],
    proto_message = "GroceryList",
)

fildesh_test(
    name = "json_snake_case_test",
    srcs = ["json_snake_case_test.fildesh"],
    input_by_option = {"json_file": "//example:sauces_data.json"},
)
fildesh_test(
    name = "json_camel_case_test",
    srcs = ["json_camel_case_test.fildesh"],
    input_by_option = {"json_file": "//example:sauces_data_camelcase.json"},
)
