load("@rules_proto//proto:defs.bzl", "proto_library")
load("//sxproto:defs.bzl", "sxproto_data", "textproto_data", "protobuf_equality_test")

proto_library(
    name = "boolexpr_proto",
    srcs = ["boolexpr.proto"],
    testonly = 1,
)

sxproto_data(
    name = "boolexpr_sxproto_data",
    src = "boolexpr.sxproto",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
    testonly = 1,
)

textproto_data(
    name = "boolexpr_textproto_data",
    src = "boolexpr.textproto",
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
    testonly = 1,
)

protobuf_equality_test(
    name = "boolexpr_sxproto_equality_test",
    srcs = [
        "boolexpr.sxproto",
        ":boolexpr_textproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)

protobuf_equality_test(
    name = "boolexpr_textproto_equality_test",
    srcs = [
        "boolexpr.textproto",
        ":boolexpr_sxproto_data",
    ],
    proto_deps = [":boolexpr_proto"],
    proto_message = "sxproto.test.manyof.BooleanExpressionList",
)
